<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activityMainName"
        style="@style/CustomTextStyle"
        android:layout_width="161dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/animal_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="204dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMainName">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="93dp"
            android:layout_height="105dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_sanitizer"/>

        <TextView
            android:id="@+id/catOneName"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/cat_name_Ben"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CatOneDescription"
            android:layout_width="128dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/cat_description_Ben"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/catOneName" />

        <Button
            android:id="@+id/CatOneDetails"
            android:layout_width="131dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/details"
            android:background="@drawable/custom_details_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="416dp"
        android:layout_height="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="93dp"
            android:layout_height="105dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_sanitizer" />

        <TextView
            android:id="@+id/catTwoName"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/cat_name_Bon"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CatTwoDescription"
            android:layout_width="134dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/cat_description_Bon"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/catTwoName" />

        <Button
            android:id="@+id/CatTwoDetails"
            android:layout_width="131dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/details"
            android:background="@drawable/custom_details_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="93dp"
            android:layout_height="105dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_sanitizer" />

        <TextView
            android:id="@+id/catThreeName"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/cat_name_Bin"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CatThreeDescription"
            android:layout_width="105dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/cat_description_Bin"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/catThreeName" />

        <Button
            android:id="@+id/CatThreeDetails"
            android:layout_width="131dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/details"
            android:background="@drawable/custom_details_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>